Update changelog and fix some code smell